# slow-numbers

./: README.md  package.yaml  slow-numbers.cabal  stack.yaml
bench/: bench.hs
src/Numeric/: Church.hs  Decimal.hs  IntOfSize.hs  PAdic.hs  Peano.hs  Positional.hs  Scott.hs  WordOfSize.hs
src/Numeric/Church/: Prelude.hs
src/Numeric/Peano/: Proofs.hs
test/: Spec.hs
