name:                slow-numbers
version:             0.1.0.0
synopsis:            Library for the slower number types, like Peano, Church, etc.
homepage:            https://github.com/oisdk/slow-numbers#readme
license:             MIT
license-file:        LICENSE
author:              Donnacha Oisín Kidney
maintainer:          mail@doisinkidney.com
copyright:           2016 Donnacha Oisín Kidney
category:            Numeric
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Numeric.Peano
                     , Numeric.Church
                     , Numeric.Scott
  other-modules:       Numeric.Church.Prelude
  build-depends:       base >= 4.7 && < 5
                     , singletons >= 2
                     , deepseq >= 1.4
  default-language:    Haskell2010

test-suite slow-numbers-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , slow-numbers
                     , hedgehog >= 0.1
                     , doctest
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark bench
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             bench.hs
  ghc-options:         -O2 -rtsopts -threaded

  build-depends:       base >=4.8
                     , slow-numbers
                     , criterion >=0.1
  

source-repository head
  type:     git
  location: https://github.com/oisdk/slow-numbers
